<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Password Store</string>

    <!-- XML CONSTANT VALUE -->
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_password">reConfirm Password</string>
    <string name="description">Description</string>
    <string name="tag">Tag</string>

    <string name="edit_ignored">* changes made on this page will be ignored</string>
    <string name="no_data_saved">No data has been saved yet</string>

    <string name="save_menu">Save</string>
    <string name="edit_menu">Edit</string>

    <string name="init_encrypt_txt">Enter a password that will be used to encrypt or secure your password data, this password will also be used to restore your data if you have previously backed it up with the condition that the database password is the same as the one you will set this time.</string>

    <string name="lock_preference_title">Lock App</string>
    <string name="lock_preference_summary">Request password when app is opened</string>
    <string name="lock_preference_summary_not_enable">Cannot be activated because the device is not assigned a password/biometric password</string>

    <string name="lock_detail_preference_title">Lock Detail Password</string>
    <string name="lock_detail_preference_summary">Request password when view password details</string>
    <string name="lock_detail_preference_summary_not_enable">Cannot be activated because the device is not assigned a password/biometric password</string>

    <string name="backup_preference_title">Backup data</string>
    <string name="backup_preference_summary">Click to back up data </string>

    <string name="restore_preference_title">Restore data</string>
    <string name="restore_preference_summary">Click to restore data, Perhaps only files generated by this application can be used. </string>

    <string name="delete_preference_title">Delete</string>
    <string name="delete_preference_summary">Click to delete all data in the current database.</string>

    <string name="update_preference_title">Check Application Update</string>
    <string name="update_preference_message">Click to check if there is an update</string>

    <!-- END XML CONSTANT VALUE -->

    <!-- ACTIVITY / FRAGMENT CONSTANT VALUE -->
    <string name="add_password">Add Password</string>
    <string name="setting">Settings</string>
    <string name="pick_color">Pick Color</string>
    <string name="confirm_ok">Oke</string>
    <string name="confirm_close">Close</string>
    <string name="delete_data_message_title_dialog">Delete</string>
    <string name="delete_data_message_summary_dialog">Are you sure you want to delete data?</string>

    <string name="input_pass_not_equals">Password and Confirm Password values are not the same!</string>
    <string name="input_cannot_empty">some forms cannot be blank!</string>
    <string name="success">Success</string>

    <string name="enter_device_password"> Is Locked</string>
    <string name="enter_device_password_desc">confirm that it\'s you</string>

    <string name="backup_data_message_title_dialog">Backup Data</string>
    <string name="backup_data_message_summary_dialog">Please do not exit the application before the backup process is complete</string>

    <string name="restore_data_message_title_dialog">Restore Data</string>
    <string name="restore_data_message_summary_dialog">This process will delete the current data. Please do not exit the application before the restore process is complete</string>

    <string name="err_no_file_selected">No files selected, operation aborted</string>
    <string name="err_back_button_pressed">The back button is clicked, while the file has not been saved to a location in internal storage, the operation is cancelled</string>

    <string name="no_available_update">No Available Update</string>
    <!-- END ACTIVITY / FRAGMENT CONSTANT VALUE -->

</resources>