<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/app_name"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/init_encrypt_txt"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        app:endIconMode="password_toggle"
        android:layout_margin="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_24"
            android:inputType="textPassword|textVisiblePassword"
            android:imeOptions="actionNext"
            android:hint="@string/password"
            android:id="@+id/edt_pass1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        app:endIconMode="password_toggle"
        android:layout_margin="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:drawableStart="@drawable/baseline_lock_24"
            android:inputType="textPassword|textVisiblePassword"
            android:hint="@string/re_password"
            android:id="@+id/edt_pass2"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_close"
            android:layout_marginEnd="5dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_ok"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_marginEnd="15dp"
            />

    </LinearLayout>

</LinearLayout>