<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/medium_appbar"
        android:id="@+id/inc"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_preview"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@color/seed"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_launcher_background" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    app:startIconDrawable="@drawable/baseline_color_lens_24"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pick_color"
                        android:inputType="none"
                        android:editable="false"
                        android:id="@+id/edt_color"
                        tools:ignore="Deprecated" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:startIconDrawable="@drawable/baseline_title_24"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:id="@+id/edt_title"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:startIconDrawable="@drawable/baseline_person_24"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:id="@+id/edt_username"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/baseline_lock_24"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:id="@+id/edt_password"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/baseline_lock_24"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_password"
                    android:id="@+id/edt_re_password"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:startIconDrawable="@drawable/baseline_description_24"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:id="@+id/edt_desc"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                app:startIconDrawable="@drawable/baseline_tag_24"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tag"
                    android:id="@+id/edt_tags"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>